@@ -1,4 +1,5 @@
 # Configuration that controls the execution of the acceptance tests.
+# These are the default configuration values.  To override them, use the project-level local.properties file.
 
 # To run with IE, you'll also have to:
 #
@@ -29,3 +30,7 @@ config_credentialsUser=user
 
 # Username that that is locked
 config_credentialsLocked=locked
+
+# Amount of time Capybara should wait for AJAX requests to complete
+# If tests are failing because some element doesn't exist (yet), then increase this in local.properties. 
+config_defaultAjaxWaitTime=5 
